smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enums/missing-newline-after-assignment.smithy
// Syntax error at line 6, column 13: Expected a line break, but found IDENTIFIER('BAZ') | Model
$version: "2.0"
namespace smithy.example

intEnum Foo {
    BAR = 1 BAZ = 2
}
